Translate required field text.

--- a/src/app/html/justus/tietojensyotto.html
+++ b/src/app/html/justus/tietojensyotto.html
@@ -103,7 +103,7 @@
          data-ng-show="i18n.content.form.julkaisunnimi.tooltip[lang]">
       </i>
       <i data-ng-if="isFieldRequired('julkaisunnimi')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-      <span data-ng-if="isFieldRequired('julkaisunnimi')" class="sr-only">Required field</span>
+      <span data-ng-if="isFieldRequired('julkaisunnimi')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
     </div>
     <div class="col-sm-8 col-xs-12 justus-data"
          data-ng-model="req_julkaisunnimi">
@@ -133,7 +133,7 @@
          data-ng-show="i18n.content.form.tekijat.tooltip[lang]">
       </i>
        <i data-ng-if="isFieldRequired('tekijat')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-      <span data-ng-if="isFieldRequired('tekijat')" class="sr-only">Required field</span>
+      <span data-ng-if="isFieldRequired('tekijat')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
     </div>
     <div class="col-sm-8 col-xs-12 justus-data"
          data-ng-model="req_tekijat">
@@ -173,7 +173,7 @@
          data-ng-show="i18n.content.form.julkaisuntekijoidenlukumaara.tooltip[lang]">
       </i>
       <i data-ng-if="isFieldRequired('julkaisuntekijoidenlukumaara')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-      <span data-ng-if="isFieldRequired('julkaisuntekijoidenlukumaara')" class="sr-only">Required field</span>
+      <span data-ng-if="isFieldRequired('julkaisuntekijoidenlukumaara')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
     </div>
     <div class="col-sm-8 col-xs-12 justus-data"
          data-ng-model="req_julkaisuntekijoidenlukumaara">
@@ -249,7 +249,7 @@
          data-ng-show="i18n.content.form.organisaatiotekija.tooltip[lang]">
       </i>
       <i data-ng-if="isFieldRequired('organisaatiotekija')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-      <span data-ng-if="isFieldRequired('organisaatiotekija')" class="sr-only">Required field</span>
+      <span data-ng-if="isFieldRequired('organisaatiotekija')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
     </div>
     <div class="col-sm-8 col-xs-12 justus-data">
       <div data-ng-repeat="i in justus.organisaatiotekija track by $index"
@@ -481,7 +481,7 @@
         </i>
         <i data-ng-if="isFieldRequired('konferenssinvakiintunutnimi')" class="fa fa-asterisk required-star"
            aria-hidden="true"></i>
-        <span data-ng-if="isFieldRequired('konferenssinvakiintunutnimi')" class="sr-only">Required field</span>
+        <span data-ng-if="isFieldRequired('konferenssinvakiintunutnimi')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
       </div>
       <div class="col-sm-8 col-xs-12 justus-data"
            data-ng-model="req_konferenssinvakiintunutnimi">
@@ -518,7 +518,7 @@
            data-ng-show="i18n.content.form.emojulkaisunnimi.tooltip[lang]">
         </i>
         <i data-ng-if="isFieldRequired('emojulkaisunnimi')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-        <span data-ng-if="isFieldRequired('emojulkaisunnimi')" class="sr-only">Required field</span>
+        <span data-ng-if="isFieldRequired('emojulkaisunnimi')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
       </div>
       <div class="col-sm-8 col-xs-12 justus-data">
         <div class="row">
@@ -548,7 +548,7 @@
            data-uib-popover="{{julkaisutyyppi_paa == 'F' ? i18n.content.form.isbn.tooltipF[lang] : i18n.content.form.isbn.tooltip[lang]}}"
            data-ng-show="i18n.content.form.isbn.tooltip[lang]"></i>
         <i data-ng-if="isFieldRequired('isbn')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-        <span data-ng-if="isFieldRequired('isbn')" class="sr-only">Required field</span>
+        <span data-ng-if="isFieldRequired('isbn')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
       </div>
       <div class="col-sm-8 col-xs-12 justus-data">
         <div class="row">
@@ -613,7 +613,7 @@
         </i>
         <i data-ng-if="isFieldRequired('emojulkaisuntoimittajat')" class="fa fa-asterisk required-star"
            aria-hidden="true"></i>
-        <span data-ng-if="isFieldRequired('emojulkaisuntoimittajat')" class="sr-only">Required field</span>
+        <span data-ng-if="isFieldRequired('emojulkaisuntoimittajat')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
       </div>
       <div class="col-sm-8 col-xs-12 justus-data">
         <div class="row">
@@ -653,7 +653,7 @@
            data-ng-show="i18n.content.form.lehdenjulkaisusarjannimi.tooltip[lang]"></i>
         <i data-ng-if="isFieldRequired('lehdenjulkaisusarjannimi')" class="fa fa-asterisk required-star"
            aria-hidden="true"></i>
-        <span data-ng-if="isFieldRequired('lehdenjulkaisusarjannimi')" class="sr-only">Required field</span>
+        <span data-ng-if="isFieldRequired('lehdenjulkaisusarjannimi')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
       </div>
       <div class="col-sm-8 col-xs-12 justus-data">
         <div class="row">
@@ -712,7 +712,7 @@
            data-ng-show="i18n.content.form.issn.tooltip[lang]">
         </i>
         <i data-ng-if="isFieldRequired('issn')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-        <span data-ng-if="isFieldRequired('issn')" class="sr-only">Required field</span>
+        <span data-ng-if="isFieldRequired('issn')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
       </div>
       <div class="col-sm-8 col-xs-12 justus-data">
         <div class="row">
@@ -778,7 +778,7 @@
            data-ng-show="i18n.content.form.volyymi.tooltip[lang]">
         </i>
         <i data-ng-if="isFieldRequired('volyymi')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-        <span data-ng-if="isFieldRequired('volyymi')" class="sr-only">Required field</span>
+        <span data-ng-if="isFieldRequired('volyymi')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
       </div>
       <div class="col-sm-8 col-xs-12 justus-data">
         <div class="row">
@@ -809,7 +809,7 @@
            data-ng-show="i18n.content.form.numero.tooltip[lang]">
         </i>
         <i data-ng-if="isFieldRequired('numero')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-        <span data-ng-if="isFieldRequired('numero')" class="sr-only">Required field</span>
+        <span data-ng-if="isFieldRequired('numero')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
       </div>
       <div class="col-sm-8 col-xs-12 justus-data">
         <div class="row">
@@ -844,7 +844,7 @@
            data-ng-show="i18n.content.form.sivut.tooltip[lang]">
         </i>
         <i data-ng-if="isFieldRequired('sivut')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-        <span data-ng-if="isFieldRequired('sivut')" class="sr-only">Required field</span>
+        <span data-ng-if="isFieldRequired('sivut')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
       </div>
       <div class="col-sm-8 col-xs-12 justus-data">
         <div class="row">
@@ -878,7 +878,7 @@
            data-ng-show="i18n.content.form.artikkelinumero.tooltip[lang]">
         </i>
         <i data-ng-if="isFieldRequired('artikkelinumero')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-        <span data-ng-if="isFieldRequired('artikkelinumero')" class="sr-only">Required field</span>
+        <span data-ng-if="isFieldRequired('artikkelinumero')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
       </div>
       <div class="col-sm-8 col-xs-12 justus-data">
         <div class="row">
@@ -913,7 +913,7 @@
            data-ng-show="i18n.content.form.kustantaja.tooltip[lang]">
         </i>
         <i data-ng-if="isFieldRequired('kustantaja')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-        <span data-ng-if="isFieldRequired('kustantaja')" class="sr-only">Required field</span>
+        <span data-ng-if="isFieldRequired('kustantaja')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
       </div>
       <div class="col-sm-8 col-xs-12 justus-data"
            data-ng-model="req_kustantaja" data-ng-required="requiredHighlight && !isValid('kustantaja')">
@@ -958,7 +958,7 @@
         </i>
         <i data-ng-if="isFieldRequired('julkaisunkustannuspaikka')" class="fa fa-asterisk required-star"
            aria-hidden="true"></i>
-        <span data-ng-if="isFieldRequired('julkaisunkustannuspaikka')" class="sr-only">Required field</span>
+        <span data-ng-if="isFieldRequired('julkaisunkustannuspaikka')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
       </div>
       <div class="col-sm-8 col-xs-12 justus-data">
         <div class="row">
@@ -1001,7 +1001,7 @@
             data-ng-show="i18n.content.form.avainsanat.tooltip[lang]">
          </i>
          <i data-ng-if="isFieldRequired('avainsanat')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-         <span data-ng-if="isFieldRequired('avainsanat')" class="sr-only">Required field</span>
+         <span data-ng-if="isFieldRequired('avainsanat')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
        </div>
        <div class="col-sm-8 col-xs-12 justus-data">
          <tags-input
@@ -1044,7 +1044,7 @@
             data-ng-show="i18n.content.form.julkaisunkieli.tooltip[lang]">
          </i>
          <i data-ng-if="isFieldRequired('julkaisunkieli')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-         <span data-ng-if="isFieldRequired('julkaisunkieli')" class="sr-only">Required field</span>
+         <span data-ng-if="isFieldRequired('julkaisunkieli')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
        </div>
        <div class="col-sm-8 col-xs-12 justus-data">
          <div class="row">
@@ -1099,7 +1099,7 @@
          </i>
          <i data-ng-if="isFieldRequired('julkaisunkansainvalisyys')" class="fa fa-asterisk required-star"
             aria-hidden="true"></i>
-         <span data-ng-if="isFieldRequired('julkaisunkansainvalisyys')" class="sr-only">Required field</span>
+         <span data-ng-if="isFieldRequired('julkaisunkansainvalisyys')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
        </div>
        <div class="col-sm-8 col-xs-12 justus-data"
             data-ng-model="req_julkaisunkansainvalisyys">
@@ -1144,7 +1144,7 @@
             data-ng-show="i18n.content.form.julkaisumaa.tooltip[lang]">
          </i>
          <i data-ng-if="isFieldRequired('julkaisumaa')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-         <span data-ng-if="isFieldRequired('julkaisumaa')" class="sr-only">Required field</span>
+         <span data-ng-if="isFieldRequired('julkaisumaa')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
        </div>
        <div class="col-sm-8 col-xs-12 justus-data">
          <div class="row">
@@ -1199,7 +1199,7 @@
          <i data-ng-if="isFieldRequired('julkistamispaikkakunta')"
             class="fa fa-asterisk required-star"
             aria-hidden="true"></i>
-         <span data-ng-if="isFieldRequired('julkistamispaikkakunta')" class="sr-only">Required field</span>
+         <span data-ng-if="isFieldRequired('julkistamispaikkakunta')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
        </div>
        <div class="col-sm-8 col-xs-12 justus-data"
             data-ng-model="justus.lisatieto.julkistamispaikkakunta"
@@ -1235,7 +1235,7 @@
             data-ng-show="i18n.content.form.tapahtumanlisatieto.tooltip[lang]">
          </i>
          <i data-ng-if="isFieldRequired('tapahtumanlisatieto')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-         <span data-ng-if="isFieldRequired('tapahtumanlisatieto')" class="sr-only">Required field</span>
+         <span data-ng-if="isFieldRequired('tapahtumanlisatieto')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
        </div>
        <div class="col-sm-8 col-xs-12 justus-data"
             data-ng-model="req_tapahtuma" data-ng-required="requiredHighlight && !isValid('lisatieto')">
@@ -1273,7 +1273,7 @@
             data-ng-show="i18n.content.form.tieteenala.tooltip[lang]">
          </i>
          <i data-ng-if="isFieldRequired('tieteenala')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-         <span data-ng-if="isFieldRequired('tieteenala')" class="sr-only">Required field</span>
+         <span data-ng-if="isFieldRequired('tieteenala')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
        </div>
        <div class="col-sm-8 col-xs-12 justus-data">
          <div data-ng-repeat="i in justus.tieteenala track by $index"
@@ -1374,7 +1374,7 @@
             data-ng-show="i18n.content.form.taiteenala.tooltip[lang]">
          </i>
          <i data-ng-if="isFieldRequired('taiteenala')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-         <span data-ng-if="isFieldRequired('taiteenala')" class="sr-only">Required field</span>
+         <span data-ng-if="isFieldRequired('taiteenala')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
        </div>
        <div class="col-xs-10 col-sm-8 justus-data">
 
@@ -1437,7 +1437,7 @@
          </i>
          <i data-ng-if="isFieldRequired('taidealantyyppikategoria')" class="fa fa-asterisk required-star"
             aria-hidden="true"></i>
-         <span data-ng-if="isFieldRequired('taidealantyyppikategoria')" class="sr-only">Required field</span>
+         <span data-ng-if="isFieldRequired('taidealantyyppikategoria')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
        </div>
        <div class="col-xs-10 col-sm-8 justus-data">
 
@@ -1498,7 +1498,7 @@
          </i>
          <i data-ng-if="isFieldRequired('kansainvalinenyhteisjulkaisu')" class="fa fa-asterisk required-star"
             aria-hidden="true"></i>
-         <span data-ng-if="isFieldRequired('kansainvalinenyhteisjulkaisu')" class="sr-only">Required field</span>
+         <span data-ng-if="isFieldRequired('kansainvalinenyhteisjulkaisu')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
        </div>
        <div class="col-sm-8 col-xs-12 justus-data"
             data-ng-model="req_kansainvalinenyhteisjulkaisu"
@@ -1549,7 +1549,7 @@
          </i>
          <i data-ng-if="isFieldRequired('yhteisjulkaisuyrityksenkanssa')" class="fa fa-asterisk required-star"
             aria-hidden="true"></i>
-         <span data-ng-if="isFieldRequired('yhteisjulkaisuyrityksenkanssa')" class="sr-only">Required field</span>
+         <span data-ng-if="isFieldRequired('yhteisjulkaisuyrityksenkanssa')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
        </div>
        <div class="col-sm-8 col-xs-12 justus-data"
             data-ng-model="req_yhteisjulkaisuyrityksenkanssa"
@@ -1601,7 +1601,7 @@
             data-ng-show="i18n.content.form.doitunniste.tooltip[lang]">
          </i>
          <i data-ng-if="isFieldRequired('doitunniste')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-         <span data-ng-if="isFieldRequired('doitunniste')" class="sr-only">Required field</span>
+         <span data-ng-if="isFieldRequired('doitunniste')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
        </div>
        <div class="col-sm-8 col-xs-12 justus-data">
          <div class="row">
@@ -1632,7 +1632,7 @@
             data-ng-show="i18n.content.form.muutunniste.tooltip[lang]">
          </i>
          <i data-ng-if="isFieldRequired('muutunniste')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-         <span data-ng-if="isFieldRequired('muutunniste')" class="sr-only">Required field</span>
+         <span data-ng-if="isFieldRequired('muutunniste')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
        </div>
        <div class="col-sm-8 col-xs-12 justus-data"
             data-ng-model="req_muutunniste" data-ng-required="requiredHighlight && !isValid('muutunniste')">
@@ -1669,7 +1669,7 @@
          </i>
          <i data-ng-if="isFieldRequired('pysyvaverkkoosoite')" class="fa fa-asterisk required-star"
             aria-hidden="true"></i>
-         <span data-ng-if="isFieldRequired('pysyvaverkkoosoite')" class="sr-only">Required field</span>
+         <span data-ng-if="isFieldRequired('pysyvaverkkoosoite')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
        </div>
        <div class="col-sm-8 col-xs-12 justus-data">
          <div class="row">
@@ -1703,7 +1703,7 @@
             data-ng-show="i18n.content.form.avoinsaatavuus.tooltip[lang]">
          </i>
          <i data-ng-if="isFieldRequired('avoinsaatavuus')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-         <span data-ng-if="isFieldRequired('avoinsaatavuus')" class="sr-only">Required field</span>
+         <span data-ng-if="isFieldRequired('avoinsaatavuus')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
        </div>
        <div class="col-sm-8 col-xs-12 justus-data"
             data-ng-model="req_avoinsaatavuus"
@@ -1782,7 +1782,7 @@
             data-ng-show="i18n.content.form.lisatieto.tooltip[lang]">
          </i>
          <i data-ng-if="isFieldRequired('lisatieto')" class="fa fa-asterisk required-star" aria-hidden="true"></i>
-         <span data-ng-if="isFieldRequired('lisatieto')" class="sr-only">Required field</span>
+         <span data-ng-if="isFieldRequired('lisatieto')" class="sr-only" data-ng-bind="i18n.content.form.pakollinenkentta[lang]"></span>
        </div>
        <div class="col-sm-8 col-xs-12 justus-data"
             data-ng-model="req_lisatieto" data-ng-required="requiredHighlight && !isValid('lisatieto')">
