--- a/src/app/html/justus/tallennus.html
+++ b/src/app/html/justus/tallennus.html
@@ -1,3 +1,13 @@
+<div class="row">
+  <div class="col-xs-12">
+    <div class="breadcrumb">
+      <h1 data-ng-bind="i18n.header.navigation.tallenna[lang]"></h1> <span><i class="fa fa-chevron-right"></i></span>
+      <h2 data-ng-bind="i18n.content.vaihevuo.tallennus[lang]"></h2>
+    </div>
+  </div>
+</div>
+
+
 <div class="field-info-list">
 
   <table class="table table-hover text-secondary">
