--- a/src/app/html/justus/julkaisutyyppi.html
+++ b/src/app/html/justus/julkaisutyyppi.html
@@ -2,6 +2,15 @@
   <span class="text-2xl text-dark">Muokkaat julkaisua {{ justus.julkaisu.id }}, {{ justus.julkaisu.julkaisunnimi }}</span>
 </div>
 
+<div class="row">
+  <div class="col-xs-12">
+    <div class="breadcrumb">
+      <h1 data-ng-bind="i18n.header.navigation.tallenna[lang]"></h1> <span><i class="fa fa-chevron-right"></i></span>
+      <h2 data-ng-bind="i18n.content.vaihevuo.julkaisutyyppi[lang]"></h2>
+    </div>
+  </div>
+</div>
+
 <uib-accordion class="text-secondary">
   <div uib-accordion-group class="panel-default"
        data-ng-repeat="o in codes.julkaisutyypit | orderBy: 'arvo' track by $index"
