--- a/src/app/html/valitse.html
+++ b/src/app/html/valitse.html
@@ -1,7 +1,8 @@
 <!-- vaihe 0 valitse -->
 
+
 <div class="p-1 text-center">
-    <h2 class="text-secondary font-weight-700 text-2xl" data-ng-bind="i18n.content.valitse.title[lang]"></h2>
+    <h1 class="text-secondary font-weight-700 h2" data-ng-bind="i18n.content.valitse.title[lang]"></h1>
 </div>
 
 <div class="row" style="margin-bottom: 30px">
@@ -33,7 +34,7 @@
 
 <div data-ng-if="hasAccessToApprove()">
     <div class="p-1 text-center">
-        <h2 class="text-secondary font-weight-700 text-2xl" data-ng-bind="i18n.content.valitse.admintitle[lang]"></h2>
+        <h2 class="text-secondary font-weight-700 " data-ng-bind="i18n.content.valitse.admintitle[lang]"></h2>
     </div>
     <div class="row m-b">
         <div class="col-xs-12 col-sm-6 text-center">
