--- a/src/app/scss/_layout.scss
+++ b/src/app/scss/_layout.scss
@@ -13,8 +13,9 @@ p {
 }
 
 h3 {
-  font-weight: 700;
-  color: $text-color-dark;
+  //font-weight: 700;
+  font-size: 22px;
+  //color: $text-color-dark;
 }
 
 h5 {
@@ -63,6 +64,28 @@ h5 {
 
 .form-container {
   margin-bottom: 50px;
+}
+
+.breadcrumb {
+  font-family: $font-family-secondary;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 7px;
+  padding-left: 5px;
+
+  h1 {
+    display: inline-block;
+    margin: 0;
+    font-size: $font-size-xl;
+
+
+  }
+  h2 {
+    display: inline-block;
+    margin:0;
+    font-size: $font-size-xl;
+    padding-left: 4px;
+  }
 }
 
 .footer-wrapper {
