--- a/src/app/html/justus/julkaisutyyppi.html
+++ b/src/app/html/justus/julkaisutyyppi.html
@@ -1,5 +1,5 @@
 <div class="alert alert-default text-center text-secondary" data-ng-if="justus.julkaisu.id">
-  <span class="text-2xl text-dark">Muokkaat julkaisua {{ justus.julkaisu.id }}, {{ justus.julkaisu.julkaisunnimi }}</span>
+  <span class="text-2xl text-dark">{{i18n.content.alert.text[lang]}}  {{ justus.julkaisu.id }}, {{ justus.julkaisu.julkaisunnimi }}</span>
 </div>
 
 <div class="row">
